AWS-new-2: Dashboard, Task manager layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>AWS Management</title>
+    <title>AWS Manager</title>
   </head>
   <body>
     <div id="root"></div>
